Regression: Clipping Region in the viewport its not working #103256

Closed
opened 2022-12-16 05:09:19 +01:00 by Nahuel Belich · 17 comments

System Information
Operating system: Linux-5.15.0-56-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-12 17:28, hash: e4f9c50928
Worked: 3.4.0
Caused by bfb6ea898b
Short description of error
Its Clipping Region not clipping.

3.5 alpha 3.4 official
image.png image.png

Exact steps for others to reproduce the error
1- dont delete the default cube
2- alt+b and box select a part of the cube.

**System Information** Operating system: Linux-5.15.0-56-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-12 17:28, hash: `e4f9c50928` Worked: 3.4.0 Caused by bfb6ea898b **Short description of error** Its Clipping Region not clipping. | 3.5 alpha | 3.4 official | | -- | -- | | ![image.png](https://archive.blender.org/developer/F14061224/image.png) | ![image.png](https://archive.blender.org/developer/F14061230/image.png) | **Exact steps for others to reproduce the error** 1- dont delete the default cube 2- alt+b and box select a part of the cube.
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

#103504 was marked as duplicate of this issue

#103504 was marked as duplicate of this issue

#103264 was marked as duplicate of this issue

#103264 was marked as duplicate of this issue
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Hi, thanks for the report. I can replicate the problem.
This started to happen after bfb6ea898b
@fclem ^

Hi, thanks for the report. I can replicate the problem. This started to happen after bfb6ea898b @fclem ^
Pratik Borhade changed title from Clipping Region in the viewport its not working to Regression: Clipping Region in the viewport its not working 2022-12-16 11:17:03 +01:00
Member

Added subscriber: @stefanotoneatto

Added subscriber: @stefanotoneatto

Added subscriber: @BlenderBruno

Added subscriber: @BlenderBruno

FYI, on my system it is clipping... badly but clipping! Here is a video if it helps

System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GT 750M OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-14.0.32 355.11.11.10.10.143

Blender Version
Broken: version: 3.5.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: rBUnknown

Untitled.mp4

FYI, on my system it is clipping... badly but clipping! Here is a video if it helps **System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GT 750M OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-14.0.32 355.11.11.10.10.143 **Blender Version** Broken: version: 3.5.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `rBUnknown` [Untitled.mp4](https://archive.blender.org/developer/F14094175/Untitled.mp4)
Member

Added subscriber: @jaggz

Added subscriber: @jaggz

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

@fclem Hey, can you please look at this high priority report? Thanks in advance.

@fclem Hey, can you please look at this high priority report? Thanks in advance.

This issue was referenced by 87bb14ab5f

This issue was referenced by 87bb14ab5fcfc59ad4cc437e4b00f649cf2240c0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2023-01-15 14:24:27 +01:00
Author

Hi, doing more testing it doesn't seem to be working for attributes preview, im not sure if this is the same bug
should i do a new ticket?
image.png
Screencast from 17-01-23 23:53:41.webm

Hi, doing more testing it doesn't seem to be working for attributes preview, im not sure if this is the same bug should i do a new ticket? ![image.png](https://archive.blender.org/developer/F14170135/image.png) [Screencast from 17-01-23 23:53:41.webm](https://archive.blender.org/developer/F14170137/Screencast_from_17-01-23_23_53_41.webm)
Member

should i do a new ticket?

yes :)

> should i do a new ticket? yes :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103256
No description provided.