Fix T103256 Viewport: Regression: Clipping Region is not working

This was caused by a change in UBO name that wasn't propagated through
all usage, leading to missing UBO bind.